/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.tools.utp.plugins.result.listener.gradle.proto;

import "google/protobuf/any.proto";

option java_package = 'com.android.tools.utp.plugins.result.listener.gradle.proto';
option java_outer_classname = 'GradleAndroidTestResultListenerProto';

service GradleAndroidTestResultListenerService {
    // RPC for recording test results. Android Gradle plugin starts this gRPC
    // server and UTP calls this RPC to record results in AGP.
    rpc RecordTestResultEvent (stream TestResultEvent) returns (RecordTestResultEventResponse);
}

// Information about test progress and results.
message TestResultEvent {
    // Represents a state of the test suite and test case execution.
    oneof State {
        // The test suite has started running.
        TestSuiteStarted test_suite_started = 1;
        // A test case in the test suite has started running.
        TestCaseStarted test_case_started = 2;
        // A test case in the test suite has finished.
        TestCaseFinished test_case_finished = 3;
        // The test suite has finished.
        TestSuiteFinished test_suite_finished = 4;
    }

    // A detailed information about the started test suite.
    message TestSuiteStarted {
        // Message must be google.testing.platform.proto.api.core.TestSuiteMetaData.
        google.protobuf.Any test_suite_metadata = 1;
    }

    // A detailed information about the started test case.
    message TestCaseStarted {
        // Message must be google.testing.platform.proto.api.core.TestCase.
        google.protobuf.Any test_case = 1;
    }

    // A detailed information about the finished test case.
    message TestCaseFinished {
        // Message must be google.testing.platform.proto.api.core.TestResult.
        google.protobuf.Any test_case_result = 1;
    }

    // A detailed information about the finished test suite.
    message TestSuiteFinished {
        // Message must be google.testing.platform.proto.api.core.TestSuiteResult.
        google.protobuf.Any test_suite_result = 1;
    }

    // A device ID of which the test has executed on.
    string deviceId = 5;
}

// Information about the result of the record test result rpc call.
message RecordTestResultEventResponse {}
